<resources>
    <string name="app_name">Word Search</string>
    <string name="title">Word Search</string>
    <string name="best_time">Best Time</string>
    <string name="na">N.A.</string>
    <string name="play_game">Play Game</string>
    <string name="settings_description">Settings</string>
    <string name="google_play_games_description">Google Play Games</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="last_name_placeholder">In</string>
    <string name="first_name_placeholder">Sign</string>
    <string name="exit_button">Exit</string>
    <string name="play_again_button">Play Again?</string>
    <string name="home_description">Mobile Android game</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="check_mark">Check Mark</string>
    <string name="finished_message">Completed the game in %1$s seconds!</string>
    <string name="sign_out">Sign Out</string>
    <string name="number_of_words">Number of words</string>
</resources>
