<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gameBoardFinished"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/checkIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/check_mark"
        android:src="@drawable/ic_check_black_40dp"
        android:tint="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finishDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/actor"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkIcon" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/small_button"
        android:elevation="5dp"
        android:fontFamily="@font/actor"
        android:padding="15dp"
        android:stateListAnimator="@animator/button_animator"
        android:text="@string/play_again_button"
        android:textColor="@drawable/small_button_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finishDescription" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_margin="15dp"
        android:alpha="0.7"
        android:background="@drawable/small_button"
        android:elevation="5dp"
        android:fontFamily="@font/actor"
        android:stateListAnimator="@animator/button_animator"
        android:text="@string/exit_button"
        android:textColor="@drawable/small_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playAgainButton" />

</androidx.constraintlayout.widget.ConstraintLayout>